--- a/index.html
+++ b/index.html
@@ -8,12 +8,24 @@
 	<title>Koryn Leslie-Arcaya</title>
 </head>
 <body>
+	<!----Headers on every page ---->
 	<h1>Koryn leslie-arcaya</h1>
-	<div>
-		<span id="list"></span> 
-		<p class="blog" id="demo"><div id="front" style="font-size: 25px; position: absolute; margin-top: 2%; max-width: 95%; margin-left: 20%; margin-right: 20%; text-align:center; font-family:palatino">A detailed-oriented software engineer who is passionate about C++, JavaScript, HTML, and Python.</div><ul class="blog" id='listingSkills'></ul></p>
+	<!----Link wrapper on every page ---->
+	<div class="link_wrapper">
+		<a href="https://twitter.com/KorynLa" class="twitter-button" data-show-count="false"><img src="Twitter_Social_Icon_Rounded_Square_Color.png" style="max-width: 2.2%;" title="twitter"></a>
+		<a href="https://linkedin.com/in/korynla" class="linkedIn-button"><img src="LI-In-Bug.png" style="max-width: 2.5%;" title="linkedIn"></a>
+		<a href="https://github.com/korynLA" class="github-button"><img src="Octocat.png" style="max-width: 2.5%;" title="github"></a>
 	</div>
-
+	<div>
+		<ul class="navigation">
+			<li><a href="index.html"> Objective</a></li>
+			<li><a href="experience.html">Resume</a></li>
+			<li><a href="projects.html"> Projects </a></li>
+		</ul>
+	</div>
+	<p class="interests">
+		Software engineer with the goal of bettering the world. Interests include Machine Learning and Full Stack development.
+	</p>
 	<span class="rectangle"></span>
 </body>
 </html>
