--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		</ul>
 	</div>
 	<p class="interests">
-		Software engineer with the goal of bettering the world. Interests include Machine Learning and Full Stack development.
+		Recent computer science graduate with the goal of bettering the world. Interests include Machine Learning and Full Stack development.
 	</p>
 	<span class="rectangle"></span>
 </body>
