Adding contact form

--- a/index.html
+++ b/index.html
@@ -26,6 +26,21 @@
 	<p class="interests">
 		Recent computer science graduate with the goal of bettering the world. Interests include Machine Learning and Full Stack development.
 	</p>
+	<h2 class="contact">Contact Me </h2>
+	<form action="https://formspree.io/korynwebsite@gmail.com" method="POST">
+		<div class="form">
+			<label for="name"><b>Name</b></label><br>
+			<input type="text" name="name" placeholder="Your Name">
+			<br>
+			<label for="_replyto"><b>Email</b></label><br>
+			<input type="email" name="_replyto" placeholder="email@email.com">
+			<br>
+			<label for="message"><b>Message</b></label><br>
+			<input type="text" name="message" placeholder="Uses formspree.io API">
+			<br>
+			<input type="submit" value="Send">
+		</div>
+	</form>
 	<span class="rectangle"></span>
 </body>
 </html>
