--- a/experience.html
+++ b/experience.html
@@ -69,9 +69,9 @@
 			</tr>
 		</table>
 		<ul>
-			<li>Interning with the programmable solutions group to validate FPGA hardware using Bash and Python</li>
-			<li>Enables access to various FPGA components with SPI drivers in Python for hardware verification</li>
-			<li>Develops and updates shared code in Git and SVN to meet test plan specification'</li>
+			<li>Interned with the programmable solutions group to validate FPGA hardware using Bash and Python</li>
+			<li>Developed a driver to access register components of FPGA hardware using hardware specification documents and Python. This created framework allowing global Intel validation engineering teams to automate the hardware verification process. </li>
+			<li>Updated shared code in Git and SVN to meet test plan specification</li>
 		</ul>
 		<table class="experience">
 			<tr>
