Long description created overflow. Added break.

--- a/experience.html
+++ b/experience.html
@@ -70,7 +70,7 @@
 		</table>
 		<ul>
 			<li>Interned with the programmable solutions group to validate FPGA hardware using Bash and Python</li>
-			<li>Developed a driver to access register components of FPGA hardware using hardware specification documents and Python. This created framework allowing global Intel validation engineering teams to automate the hardware verification process. </li>
+			<li>Developed a driver to access register components of FPGA hardware using hardware specification documents and Python. <br>This created framework allowing global Intel validation engineering teams to automate the hardware verification process. </li>
 			<li>Updated shared code in Git and SVN to meet test plan specification</li>
 		</ul>
 		<table class="experience">
