--- a/projects.html
+++ b/projects.html
@@ -23,16 +23,18 @@
 			<li><a href="projects.html"> Projects </a></li>
 		</ul>
 	</div>
-	<div class="project">
-		<h2>The Plant Journal</h2>
-		<h3>In Progress</h3>
-		<p class="project_des">A website that allows a user to enter data about their plant to keep track of its growth. The user is also able to view information about their plant using the search function. The project is being created with React and Trefle (Restful API)<p class="project_des"> 
-	</div>
-	<div class="project">
-		<h2>Adventure Game!</h2>
-		<h3>Senior Capstone Project</h3>
-		<img src="sun.png" style="width:500px;height:auto;">
-		<p class="project_des">Worked in a team of three to create a space themed command line adventure game that used natural language processing. This project was created using C++11.</p>	
+	<div class="projectwrapper">
+		<div class="project">
+			<h2>The Plant Journal</h2>
+			<h3>In Progress</h3>
+			<p class="project_des">A website that allows a user to enter data about their plant to keep track of its growth. The user is also able to view information about their plant using the search function. The project is being created with React and Trefle (Restful API)<p class="project_des"> 
+		</div>
+		<div class="project">
+			<h2>Adventure Game!</h2>
+			<h3>Senior Capstone Project</h3>
+			<img src="sun.png" style="width:500px;height:auto;">
+			<p class="project_des">Worked in a team of three to create a space themed command line adventure game that used natural language processing. This project was created using C++11.</p>	
+		</div>
 	</div>
 	<span class="rectangle"></span>
 </body>
