--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<a href="mailto:Koryn.lesliearcaya@gmail.com" class="email"><img src="email.png" style="max-width: 3%;" title="email"></a>
 		</div>
 		<nav>
-			<a href="./blog.html">Blog &#8226;</a>
+			<a href="https://bit.ly/2XGfVat">Blog &#8226;</a>
 			<a href="Resume_Koryn_Leslie-Arcaya.pdf" download>Resume &#8226;</a>
 			<a href="#education">Education &#8226;</a>
 			<a href="#projects">Projects &#8226;</a>
