Adding more projects

--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
 		<section id="projects">
 			<div>
 				<h1>Projects</h1>
+				<h3>Guinea Pig Facts</h3>
+				<h5><a href="https://github.com/KorynLA/GuineaPigFactsBackend">Github</a></h5>
+				<p>An API that allows a client to add and view facts about guinea pigs. This project is being created with MongoDB, Spring Boot / Java, Junit, and Mockito.</p>
+				<h3>Expense Tracker</h3>
+				<h5><a href="https://github.com/KorynLA/expenseTracker">Github</a></h5>
+				<p>A command line application that parses bank CSV documents and places each transaction into a category and its associated month. The client can view the final sum of the categories or month. This project is being created using test driven development with Java and Junit.</p>
 				<h3>Oregon COVID-19 Tracker</h3>
 				<h5><a href="https://github.com/KorynLA/oregonCovd19Tracker">Github</a> | <a href="https://bit.ly/3d3MaXR">View Live</a></h5>
 				<p>A web application that displays the daily Coronavirus changes, overtime regional graphs for county data, and the Oregon total graphs. This was created with a React frontend using the D3.js visualization library, Node.js/Express backend, and a PostgreSQL database. The data is scraped from the OHA website daily using Python. This has been deployed with Heroku: <b><a href="https://bit.ly/3d3MaXR">VIEW</a></p></b>
